# amplify-benchmark

./: .env.sample  .flake8  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Pipfile  README-ja.md  README.md  license.sh  pyproject.toml  setup.cfg
.github/workflows/: check_pr.yml
amplify_bench/: downloader.py  job.py  result.py  runner.py  timer.py  util.py
amplify_bench/cli/: __init__.py  cli.py  download_all.py  parser.py  run.py  stats.py
amplify_bench/cli/schemas/: annealing_benchmark_json_schema.yml  benchmark.json  index.html
amplify_bench/client_config/: __init__.py  base.py  dwave.py  fixstars.py  fujitsu.py  gurobi.py  toshiba.py
amplify_bench/problem/: base.py  cvrp.py  maxcut.py  qap.py  qplib.py  sudoku.py  tsp.py
amplify_bench/problem/data/: .gitignore  README.md
amplify_bench/problem/data/CVRPLIB/: instance_list.txt
amplify_bench/problem/data/GSET/: best_solutions.csv  instance_list.txt
amplify_bench/problem/data/QAPLIB/: esc32c.sln  esc32d.sln  instance_list.txt
amplify_bench/problem/data/QPLIB/: best_solutions.csv
amplify_bench/problem/data/SUDOKULIB/: 16x16_1_000  16x16_easy_233  16x16_hard_194  9x9_h17_055  9x9_h39_022  instance_list.txt
amplify_bench/problem/data/TSPLIB/: best_solutions.csv
docs/: license_block.txt
examples/: benchmark.yml
src/benchmark/: __init__.py  downloader.py  job.py  result.py  runner.py  timer.py  util.py
src/benchmark/cli/: __init__.py  benchmark.py  cli.py  cli_benchmark.py  cli_make_report.py  download_all.py  report.py  stats.py
src/benchmark/cli/schemas/: index.html  report_data.json  result.json
src/benchmark/client_config/: __init__.py  base.py  fixstars.py  fujitsu.py  gurobi.py  nec.py  toshiba.py  toshiba_sqbm2.py
src/benchmark/problem/: base.py  cvrp.py  maxcut.py  qap.py  qplib.py  sudoku.py  tsp.py
src/benchmark/problem/data/: .gitignore
src/benchmark/problem/data/GSET/: gset_best.csv
src/benchmark/problem/data/QAPLIB/: esc32a.sln  esc32b.sln  instance_list.txt
src/benchmark/problem/data/QPLIB/: instance_list.txt
src/benchmark/problem/data/SUDOKULIB/: 25x25_000
src/benchmark/problem/data/TSPLIB/: best_solutions.csv
test/: common.py  conftest.py  test_cli_benchmark.py  test_cli_make_report.py  test_client_config.py  test_runner.py
test/cli/: conftest.py  test_benchmark.py  test_cli_download.py  test_cli_run.py  test_cli_stats.py  test_download.py  test_report.py  test_stats.py  test_yml_parser.py
test/data/: benchmark.json  benchmark.yml  benchmark_20230419_102731.json  benchmark_20230419_102731_stats.json  benchmark_without_matrix.yml  deprecated_matrix.yml  environment.yml  error_circular_reference.yml  error_invalid_client.yml  error_invalid_client_variable.yml  error_invalid_without_client.yml  error_invalid_without_numsample.yml  error_invalid_without_problem.yml  error_ref.yml  my_problem.yml  mysample.py  mytsp.py  variable.yml
test/problem/: conftest.py  test_base.py  test_cvrp.py  test_maxcut.py  test_qap.py  test_qplib.py  test_sudoku.py  test_tsp.py
test/problem/data/: QPLIB_0067.qplib  QPLIB_sample.qplib  maxcut_sample.txt  rand_10.tsp  vrp_sample.vrp
