[metadata]
name = annealing-benchmark
version = 0.0.1
author = Hiroki Kawahara
author-email = hiroki.kawahara@fixstars.com
url = https://quantum.fixstars.com
description = Benchmark framework of Quantum and Classical Annealing Machines
long-description = file: README.md
long-description-content-type = text/markdown

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
setup_requires =
    setuptools >= 38.3.0
package_dir = = src
packages = find:
install_requires =
    amplify[extra]
    matplotlib
    numpy
    pandas
    boto3
    tsplib95
    vrplib
    tqdm
    jsonschema
    click
    python-dotenv

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    amplify-cli = benchmark.cli:cli
