[metadata]
name = amplify-bench
version = 0.0.1
author = Hiroki Kawahara
author-email = hiroki.kawahara@fixstars.com
url = https://amplify.fixstars.com/
description = Benchmark framework of Quantum and Classical Annealing Machines
long-description = file: README.md
long-description-content-type = text/markdown

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
setup_requires =
    setuptools >= 38.3.0
packages = find:
install_requires =
    amplify[extra]
    matplotlib
    numpy
    pandas
    boto3
    tsplib95
    vrplib
    tqdm
    jsonschema
    click!=8.1.4
    python-dotenv
    pyyaml

[options.package_data]
amplify_bench =
    problem/data/**/*

[options.entry_points]
console_scripts =
    amplify-bench = amplify_bench.cli:cli
