[metadata]
name = amplify-bench
version = 0.1.0a0
author = Fixstars Corporation, Fixstars Amplify Corporation
author_email = "Yoshiki Matsuda" <y_matsuda@fixstars.com>
maintainer = Yoshiki Matsuda, Hiroki Kawahara, Kosuke Suzuki
url = https://amplify.fixstars.com/
description = Benchmark framework for Quantum and Classical Annealing Machines
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
    LICENSE
keywords =
    quantum
    quantum annealing
    annealer
    annealing machine
    QUBO
    quadratic unconstrained binary optimization
    d-wave
    digital annealer
    sdk
    sbm
    simulated bifurcation
    simulated annealing
    Ising machine
    Ising model
    fixstars
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
setup_requires =
    setuptools >= 38.3.0
packages = find:
install_requires =
    amplify[extra] < 1.0.0
    matplotlib
    numpy
    pandas
    boto3
    tsplib95
    vrplib
    tqdm
    jsonschema
    click!=8.1.4, !=8.1.5
    python-dotenv
    pyyaml

[options.package_data]
amplify_bench =
    problem/data/**/*
    cli/schemas/*

[options.entry_points]
console_scripts =
    amplify-bench = amplify_bench.cli:cli
